@@ -1,0 +1,17 @@
+/*
+**  -*- C -*-
+**
+** dcoshs.c
+** Made by  Bruno JOFRET <bruno.jofret@inria.fr>
+**
+** Started on  Thu Dec  7 12:02:41 2006 jofret
+** Last update Fri Jan 19 14:56:01 2007 jofret
+**
+** Copyright INRIA 2006
+*/
+
+#include <math.h>
+
+double	       dcoshs(double x) {
+  return (cosh(x));
+}
