@@ -1,0 +1,17 @@
+/*
+**  -*- C -*-
+**
+** scoshs.c
+** Made by  Bruno JOFRET <bruno.jofret@inria.fr>
+**
+** Started on  Thu Dec  7 11:05:37 2006 jofret
+** Last update Fri Jan 19 14:53:58 2007 jofret
+**
+** Copyright INRIA 2006
+*/
+
+#include <math.h>
+
+float		scoshs(float x) {
+  return (cosh(x));
+}
