@@ -1,0 +1,17 @@
+/*
+**  -*- C -*-
+**
+** dsinhs.c
+** Made by  Bruno JOFRET <bruno.jofret@inria.fr>
+**
+** Started on  Fri Dec  8 10:50:58 2006 jofret
+** Last update Fri Jan 19 15:20:23 2007 jofret
+**
+** Copyright INRIA 2006
+*/
+
+#include <math.h>
+
+double dsinhs(double x) {
+  return (sinh(x));
+}
